curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
  labels:
    app: curl
spec:
  containers:
  - name: curl-pod
    image: curlimages/curl
    command: [ 'sleep', '6000' ]
  restartPolicy: OnFailure
