all-in-one.yml
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: food-api
# ---
# Deployment descriptor for food-api   
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-api
  labels:
    app: food-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food-api
      version: v1
  template:
    metadata:
      labels:
        app: food-api
        version: v1
      annotations:
    spec:
      # serviceAccountName: food-api    
      containers:
      - name: food-api
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8081
---
# Service descriptor to expose food frontend
apiVersion: v1
kind: Service
metadata:
  name: food-api
spec:
  type: LoadBalancer
  selector:
    app: food-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8081
---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: delivery
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-api
  labels:
    app: delivery-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-api
      version: v1
  template:
    metadata:
      labels:
        app: delivery-api
        version: v1
      annotations:
    spec:
      # serviceAccountName: delivery-api    
      containers:
      - name: delivery-api
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8080
---
# Service to expose delivery-api frontend

apiVersion: v1
kind: Service
metadata:
  name: delivery-api
spec:
  selector:
    app: delivery-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: driver-api
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-api-v1
  labels:
    app: driver-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
        app: driver-api
        version: v1
  template:
    metadata:
      labels:
        app: driver-api
        version: v1
      annotations:
    spec:
      # serviceAccountName: driver-api    
      containers:
      - name: driver-api
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8080
---
# Service to expose driver-api-v1 frontend

apiVersion: v1
kind: Service
metadata:
  name: driver-api
spec:
  selector:
    app: driver-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: driver-api
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-api-v2
  labels:
    app: driver-api
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
        app: driver-api
        version: v2
  template:
    metadata:
      labels:
        app: driver-api
        version: v2
      annotations:
    spec:
      # serviceAccountName: driver-api    
      containers:
      - name: driver-api
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8080
---
# Service to expose driver-api-v1 frontend

apiVersion: v1
kind: Service
metadata:
  name: driver-api
spec:
  selector:
    app: driver-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
