delivery-deployment.yaml
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: delivery
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-api
  labels:
    app: delivery-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-api
      version: v1
  template:
    metadata:
      labels:
        app: delivery-api
        version: v1
      annotations:
    spec:
      # serviceAccountName: delivery-api    
      containers:
      - name: delivery-api
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8080
---
# Service to expose delivery-api frontend

apiVersion: v1
kind: Service
metadata:
  name: delivery-api
spec:
  selector:
    app: delivery-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
