food-deployment.yml
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: food-api
# ---
# Deployment descriptor for food-api   
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-api
  labels:
    app: food-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food-api
      version: v1
  template:
    metadata:
      labels:
        app: food-api
        version: v1
      annotations:
    spec:
      # serviceAccountName: food-api    
      containers:
      - name: food-api
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8081
---
# Service descriptor to expose food frontend
apiVersion: v1
kind: Service
metadata:
  name: food-api
spec:
  type: LoadBalancer
  selector:
    app: food-api
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8081
