istio-traffic-management.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: food-api-vs
spec:
  hosts:
    - "food-api.tahs.local"
    # - "food-api.food-delivery.svc.cluster.local"
  gateways:
    - food-api-gw
  http:
    - route:
        - destination:
            host: food-api.food-delivery.svc.cluster.local
            port:
              number: 8080
        #     subset: v1  
        #   weight: 100
        # # - destination:
        #     host: food-api.food-delivery.svc.cluster.local
        #     subset: food-api-v2
        #   weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: food-api-dr
spec:
  host: food-api.food-delivery.svc.cluster.local
  subsets:
    - name: food-api
      labels:
        app: food-api
        # deployment: food-api
        version: v1
    # - name: driver-api-v2
    #   labels:
    #     app: food-api
    #     deployment: driver-api-v1

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: food-api-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "food-api.tahs.local"
